--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -49,7 +49,11 @@ body {
 	}
 
 	.big {
-		font-size: 21px !important;
+		font-size: 12pt !important;
+	}
+
+	.very-big {
+		font-size: 15pt !important;
 	}
 
 	.panel-default {
@@ -66,7 +70,7 @@ body {
 	}
 
 	.printer {
-		display: none
+		display: none;
 	}
 }
 
